[gd_scene load_steps=4 format=3 uid="uid://c2df5vjej30ly"]

[ext_resource type="Script" uid="uid://d2plnbqlt0xt3" path="res://main.gd" id="1_uu6xs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_glv2v"]
bg_color = Color(0.182789, 0.710422, 0.366996, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uu6xs"]
bg_color = Color(1, 0.351573, 0.183529, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_uu6xs")

[node name="DiceContainer" type="Node2D" parent="."]
position = Vector2(197, 186)

[node name="Dice1" type="Sprite2D" parent="DiceContainer"]
position = Vector2(150, 100)
scale = Vector2(0.5, 0.5)

[node name="Dice2" type="Sprite2D" parent="DiceContainer"]
position = Vector2(300, 100)
scale = Vector2(0.5, 0.5)

[node name="Dice3" type="Sprite2D" parent="DiceContainer"]
position = Vector2(450, 100)
scale = Vector2(0.5, 0.5)

[node name="Dice4" type="Sprite2D" parent="DiceContainer"]
position = Vector2(600, 100)
scale = Vector2(0.5, 0.5)

[node name="Dice5" type="Sprite2D" parent="DiceContainer"]
position = Vector2(750, 100)
scale = Vector2(0.5, 0.5)

[node name="ButtonRoll" type="Button" parent="."]
custom_minimum_size = Vector2(100, 50)
offset_left = 325.0
offset_top = 426.0
offset_right = 354.0
offset_bottom = 449.0
theme_override_styles/normal = SubResource("StyleBoxFlat_glv2v")
text = "Roll"

[node name="ButtonPlay" type="Button" parent="."]
custom_minimum_size = Vector2(100, 50)
offset_left = 503.0
offset_top = 423.0
offset_right = 603.0
offset_bottom = 473.0
theme_override_styles/normal = SubResource("StyleBoxFlat_uu6xs")
text = "Play"

[node name="ButtonRestart" type="Button" parent="."]
custom_minimum_size = Vector2(100, 50)
offset_left = 826.0
offset_top = 425.0
offset_right = 891.0
offset_bottom = 456.0
text = "Restart"

[node name="LabelContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LabelRollsLeft" type="Label" parent="LabelContainer"]
layout_mode = 2
offset_left = 84.0
offset_top = 335.0
offset_right = 151.0
offset_bottom = 358.0
text = "RollsLeft"

[node name="LabelPlaysLeft" type="Label" parent="LabelContainer"]
layout_mode = 2
offset_left = 82.0
offset_top = 363.0
offset_right = 152.0
offset_bottom = 386.0
text = "PlaysLeft"

[node name="LabelSetType" type="Label" parent="LabelContainer"]
layout_mode = 2
offset_left = 73.0
offset_top = 253.0
offset_right = 135.0
offset_bottom = 276.0
text = "SetType"

[node name="LabelPoints" type="Label" parent="LabelContainer"]
layout_mode = 2
offset_left = 75.0
offset_top = 287.0
offset_right = 124.0
offset_bottom = 310.0
text = "Points"

[node name="LabelMult" type="Label" parent="LabelContainer"]
layout_mode = 2
offset_left = 166.0
offset_top = 289.0
offset_right = 206.0
offset_bottom = 312.0
text = "Mult"

[node name="LabelSetScore" type="Label" parent="LabelContainer"]
layout_mode = 0
offset_left = 153.0
offset_top = 252.0
offset_right = 220.0
offset_bottom = 275.0
text = "SetScore"

[node name="LabelTotalScore" type="Label" parent="LabelContainer"]
layout_mode = 0
offset_left = 73.0
offset_top = 168.0
offset_right = 113.0
offset_bottom = 191.0
text = "TotalScore
"

[node name="ScoreLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
